# python_django

./: .gitignore  pyproject.toml  pyproject.toml.bak
01_IntroductionToWebFrameworks/todo/: db.sqlite3
01_IntroductionToWebFrameworks/todo/tasks/: views.py
02_IntroductionToDjango/board/about/: urls.py  views.py
02_IntroductionToDjango/board/advertisement/: urls.py  views.py
04_DatabasesAndModels/board/: db.sqlite3
05_Forms/news/: db.sqlite3
10.django-testing/mysite/: db.sqlite3  shopapp-fixtures.json
M_04_DjangoAdmin/mysite/: db.sqlite3
M_07_CBV/mysite/: db.sqlite3
M_08_Authentication/: db.sqlite3
M_08_Authentication/myauth/: urls.py  views.py
M_08_Authentication/mysite/: settings.py  urls.py
M_09_permissions/mysite/: db.sqlite3
M_11_Files/: requirements.txt
M_11_Files/mysite/: db.sqlite3
M_12_Internationalization/mysite/: db.sqlite3
M_13_DRF/mysite/: db.sqlite3
M_14_Docs/: requirements.txt
M_14_Docs/mysite/: db.sqlite3
M_16_Queries_new/mysite/: db.sqlite3
M_17_Logging_and_profiling/: docker-compose.yaml  requirements.txt
M_17_Logging_and_profiling/mysite/: db.sqlite3  log.txt  log.txt.1  log.txt.2  requirements.txt
M_18_Import_export/: Dockerfile  demo.py  requirements.txt
M_18_Import_export/mysite/: db.sqlite3  devices.csv  log.txt  products-export (1).csv  products-export.csv  shopapp-products-fixtures.json
M_19_Django_caching/: docker-compose.yaml
M_19_Django_caching/mysite/: db.sqlite3  log.txt  products-export (1).csv  products-export.csv
project01/: Pipfile
user_info/info/: views.py
(+215 files in other folders)
