[tool.poetry]
name = "python_django"
version = "0.1.0"
description = ""
authors = ["lynx <caaskia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
pillow = "^10.1.0"
django-filter = "^23.4"
django = "4.1.6"
django-debug-toolbar = "^4.3.0"
sentry-sdk = "^1.40.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
